13920 FIX UI: Increase width of scrollbars
The width of UI scrollbars was quite small, making it difficult to hit the scrollbar with the cursor.
The scrollbar width is now increased for a better user experience.
SUP-9969

--- a/web/htdocs/themes/facelift/scss/_main.scss
+++ b/web/htdocs/themes/facelift/scss/_main.scss
@@ -1253,16 +1253,20 @@ tr.hidden {
 }
 
 .simplebar-track {
-  &.simplebar-vertical div.simplebar-scrollbar::before {
-    left: 3px;
-    width: $simplebar-scrollbar-width;
+  &.simplebar-vertical {
+    width: $simplebar-track-width;
+
+    div.simplebar-scrollbar::before {
+      left: 3px;
+      width: $simplebar-scrollbar-width;
+    }
   }
 
   &.simplebar-horizontal {
     height: $spacing-double;
 
     div.simplebar-scrollbar {
-      top: 3px;
+      top: $spacing-half;
       height: $simplebar-scrollbar-width;
     }
   }
