--- a/web/htdocs/themes/facelift/scss/_variables_common.scss
+++ b/web/htdocs/themes/facelift/scss/_variables_common.scss
@@ -92,7 +92,8 @@ $toggle-switch-width: 30px;
 $tag-padding: 0.1em 0.3em;
 $page-header-height: 58px;
 $popup-filters-border-radius: 2px;
-$simplebar-scrollbar-width: 5px;
+$simplebar-scrollbar-width: 8px;
+$simplebar-track-width: $simplebar-scrollbar-width + 6px;
 $megamenu-navbar-height: 60px;
 $megamenu-spacing-bottom: 20px;
 $dashlet-anchor-size: 26px;
