--- a/web/htdocs/themes/modern-dark/scss/_variables.scss
+++ b/web/htdocs/themes/modern-dark/scss/_variables.scss
@@ -188,7 +188,7 @@ $popup-trigger-active-bg-color: $ux-theme-2;
 $tactical-overview-td-bg-color: $ux-theme-6;
 $server-time-div-bg-color: $ux-theme-6;
 $snapin-heading-border-color: rgba($white, 0.2);
-$simplebar-scrollbar-color: $ux-theme-5;
+$simplebar-scrollbar-color: $ux-theme-6;
 $popup-border: 4px solid $success;
 $popup-inner-border: 1px solid $ux-theme-3;
 $filter-add-button-hover-brightness: brightness(100);
